<resources>
    <string name="app_name">ABB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="please_fill_all_the_field">Please fill all the required field</string>
    <string name="password_matches">Passwords do not matches</string>
    <string name="please_provide_your_firstname">Please provide your First Name</string>
    <string name="please_provide_your_lastname">Please provide your Last Name</string>
    <string name="please_provide_your_username">Please provide your username</string>
    <string name="please_provide_your_email">Please provide your email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="invalid_email">Invalid email address</string>

    <!-- Intro Screen -->
    <string name="next">NEXT</string>
    <string name="request_blood">Request Blood</string>
    <string name="become_donor">Become Donor</string>
    <string name="chart_room">Chart Room</string>
    <string name="intro_description_request_blood">
        Click on Request Blood icon, from there you can select any donor on the list of available donors.
    </string>
    <string name="intro_description_become_donor">
        Click Become Donor icon, based on your location you will be given details of the available Hospitals to donate blood.
    </string>

    <string name="intro_description_chat">
       Click on chat room icon, So that you can present your thoughts/ideas about blood request or donation and ask for help on the matter.
    </string>

    <string name="get_started">Get Started</string>
    <string name="skip">SKIP</string>


    <!-- donor details Activity -->
    <string name="full_name">Full name : %s</string>
    <string name="phone_number">Phone number : %s</string>
    <string name="email">Email : %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- finishing signup process -->
    <string name="finishing_signup_text">Please check your email to verify. After Verifying your email. Please click next to setup your profile</string>

    <!-- Become a donor -->
    <string name="search_query">Enter your location to see available hospitals</string>
    <string name="hospital_information">Please visit \"%s\" hospital to donate blood in working time of 08am - 04pm everyday in weekdays</string>
    <string name="for_more_information">For More information</string>
    <string name="phone_details">Phone \: %s</string>
    <string name="thank_you">Thanks in advance</string>
    <string name="save_life">\"Give Blood Save Life\"</string>
    <string name="contact_dialog_string">You are about to call \"%s\ hospital\" via phone number \"%s\"</string>

    <!-- MainActivity Navigation drawer -->
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <string name="delete_notification_confirm">"Are sure you want to delete notification \"%s\"</string>
</resources>
