<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v4.view.ViewPager
                android:id="@+id/intro_scree_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v4.view.ViewPager>

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:background="@drawable/btn_gradient_style"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="48dp"
                android:id="@+id/get_started"
                android:text="@string/get_started"
                android:textColor="#fff"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabLayout
                app:tabBackground="@drawable/indicator_selector"
                android:id="@+id/tabIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                app:tabGravity="fill"
                app:tabIndicatorHeight="0dp">


            </android.support.design.widget.TabLayout>

            <Button
                android:drawableRight="@drawable/ic_arrow_forward"
                android:drawableTint="@color/color_red_600"
                android:textColor="@color/color_red_600"
                android:text="@string/next"
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:backgroundTint="#fff"/>


        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>